# ros2_robot_checker

./: README.md  app.py  checker_report.json  checker_report.txt  code_checker.py  sim_run.py  simulation_runner.py  task_scene.world  ur5_task.launch.py
faulty_package/: bad_node.py
launch/: sim.launch.py  ur5_task.launch.py
static/: joint_motions.log:Zone.Identifier  simulation_report.json
templates/: index.html
uploads/extracted_pkg/pick_and_place/: package.xml  setup.py
uploads/extracted_pkg/pick_and_place/pick_and_place/: move_arm.py
uploads/extracted_pkg/src/pick_and_place/: setup.py
uploads/extracted_pkg/src/pick_and_place/pick_and_place/: joint_recorder.py  move_arm.py  screenshotter.py  success_checker.py
uploads/extracted_pkg/src/ur5_pick_place/: package.xml  setup.cfg  setup.py
uploads/extracted_pkg/src/ur5_pick_place/test/: test_copyright.py
uploads/extracted_pkg/src/ur5_pick_place/ur5_pick_place/: move_arm.py
worlds/: pick_and_place.world
