<?xml version="1.0"?>
<package format="3">
  <name>pick_and_place</name>
  <version>0.0.0</version>
  <description>Correct Package for Internship Task</description>
  <maintainer email="trainer@todo.todo">rainer</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
