<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur5_pick_place</name>
  <version>0.0.1</version>
  <description>Correct ROS 2 package for UR5 simulation</description>
  <maintainer email="intern@example.com">Intern</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>trajectory_msgs</depend>
  <depend>builtin_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
